--- a/index.html
+++ b/index.html
@@ -1,65 +1,12 @@
-<!doctype html5>
 <html>
-  <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>hexbin - hexagon sticker repository</title>
-
-  <link rel="icon" type="image/png" href="assets/favicon.png">
-
-  <link href="assets/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/bundle.css" rel="stylesheet">
-
-  <meta property="og:title" content="Hexbin is a hexagon sticker repository.">
-  <meta property="og:name" content="Hexbin">
-  <meta property="og:url" content="http://hexb.in">
-  <meta property="og:image" content="/assets/opengraph-1600.png">
-
-<style type="text/css">
-body {
-  background: url("assets/bg.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-</style>
 </head>
 
-<body>
-<div class="container">
-  <nav class="navbar" role="navigation">
-    <div class="container-fluid">
-  <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand selected" href="/">
-          <img src="assets/nav.png">
-        </a>
-      </div>
+<body style="margin: 0px">
 
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="" class="selected">hexb.in</a></li>
-          <li><a href="https://github.com/maxogden/hexbin">GitHub</a></li>
-          <li><a href="/sticker.html">Stickers</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</div>
-
-<div class="navhr"></div>
 
 <div class="container main-content">
 
-  <div class="splash text-center">
-    <div class="subtitle"><span class="bold">hexbin</span> is a community-curated list of hexagon stickers. <a class="bold" href="https://github.com/maxogden/hexbin">Submit yours on GitHub.</a></div>
-  </div>
   <div id = "epic">
   </div>
   <div id="grid" style="position: relative; margin-bottom: 20px;">
@@ -69,15 +16,5 @@ body {
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="assets/shuffle.js" type="text/javascript"></script>
 <script src="assets/bundle.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-57394743-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
 </body></html>
