--- a/stickers.html
+++ b/stickers.html
@@ -1,20 +1,17 @@
 <html>
-
-</head>
-
-<body style="margin: 0px">
-
-
-<div class="container main-content">
-
-  <div id = "epic">
-  </div>
-  <div id="grid" style="position: relative; margin-bottom: 20px;">
-  </div>
-
-</div>
-<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="assets/shuffle.js" type="text/javascript"></script>
-<script src="assets/bundle.js"></script>
-
-</body></html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="assets/theme.css" />
+        <link rel="stylesheet" type="text/css" https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono&display=fallback">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
+    </head>
+    <body style="margin: 0px">
+        <div class="container main-content">
+            <div id = "epic">
+            </div>
+            <div id="grid" style="position: relative; margin-bottom: 20px;">
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+        <script src="assets/bundle.js" type="text/javascript"></script>
+    </body>
+</html>
