adding extra dependecy so this will now work with the resizer

--- a/stickers.html
+++ b/stickers.html
@@ -12,6 +12,7 @@
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.8/iframeResizer.contentWindow.min.js"></script>
         <script src="assets/bundle.js" type="text/javascript"></script>
     </body>
 </html>
